--- a/heavycenter/src/main/res/layout/frag_acct_regist.xml
+++ b/heavycenter/src/main/res/layout/frag_acct_regist.xml
@@ -41,7 +41,7 @@
                 android:layout_height="0dp">
 
                 <TextView
-                    android:layout_marginTop="100dp"
+                    android:layout_marginTop="110dp"
                     android:text="新用户注册"
                     android:textColor="@color/white"
                     android:textSize="20sp"
@@ -50,12 +50,16 @@
 
 
                 <com.siweisoft.heavycenter.module.view.input.EditLoginAcctItem
+                    style_common:inputType="0"
                     android:id="@+id/phone"
+                    style_common:iv_right = "@drawable/icon_hv_clear"
+                    style_common:txt_maxlenth = "11"
                     style_common:txt_mid = "请输入手机号"
                     style_common:iv_left="@drawable/icon_hv_phone"
                     android:layout_marginTop="30dp"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+
                     />
                 <com.siweisoft.heavycenter.module.view.input.CodeInputAcctItem
                     android:visibility="gone"
@@ -65,44 +69,15 @@
                     android:layout_height="40dp"
                     />
 
-                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:background="@drawable/drawable_bg_edit"
-                    android:orientation="horizontal"
+                <com.siweisoft.heavycenter.module.view.input.EditLoginAcctItem
+                    android:id="@+id/code"
+                    style_common:txt_mid = "请输入验证码"
+                    style_common:iv_left="@drawable/icon_hv_phone"
+                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
-                    android:gravity="center_vertical"
-                    android:layout_height="40dp">
-
-                    <ImageView
-                        android:layout_marginLeft="10dp"
-                        android:src="@drawable/icon_hv_phone"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp" />
-
-                    <EditText
-                        android:id="@+id/securycode"
-                        android:singleLine="true"
-                        android:textColorHint="@color/color_grey_700"
-                        android:hint="请输入验证码"
-                        android:paddingLeft="10dp"
-                        android:textSize="18sp"
-                        android:textColor="@color/white"
-                        android:background="@color/transparent"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent" />
-
-                    <TextView
-                        android:id="@+id/code"
-                        android:gravity="center_vertical|right"
-                        android:text="获取验证码"
-                        android:textSize="15sp"
-                        android:textColor="@color/color_hv_yelll"
-                        android:layout_marginRight="10dp"
-                        android:src="@drawable/icon_hv_clear"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent" />
-
-                </LinearLayout>
+                    android:layout_height="40dp"
+                    style_common:boo_one = "true"
+                    />
 
                 <com.siweisoft.heavycenter.module.view.input.EditLoginAcctItem
                     android:id="@+id/pwd"
@@ -111,6 +86,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    style_common:inputType="1"
                     />
                 <com.siweisoft.heavycenter.module.view.input.EditLoginAcctItem
                     android:id="@+id/repwd"
@@ -119,47 +95,40 @@
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    style_common:inputType="1"
                     />
 
-                <LinearLayout
+                <com.siweisoft.heavycenter.module.view.item.ReadView
+                    android:id="@+id/tv_read"
                     android:layout_marginTop="10dp"
-                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <com.siweisoft.heavycenter.module.view.check.CheckIV
-                        android:id="@+id/iv_check"
-                        android:src="@drawable/bg_hv_check"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp" />
-                <TextView
-                    android:layout_marginLeft="10dp"
-                    android:textSize="13sp"
-                    android:text="我已阅读并"
-                    android:textColor="@color/white"
-                    android:layout_gravity="left"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"/>
 
-                    <TextView
-                        android:layout_marginTop="10dp"
-                        android:textSize="13sp"
-                        android:text="同意《重心用户协议》"
-                        android:textColor="@color/color_hv_yelll"
-                        android:layout_gravity="left"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                </LinearLayout>
-                <TextView
+                <com.siweisoft.heavycenter.module.view.text.BgTextView
+                    android:gravity="center"
                     android:id="@+id/regist"
                     android:text="注册"
+                    android:layout_marginTop="40dp"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
+
+                    android:singleLine="true"
                     android:textSize="22sp"
-                    android:textColor="@color/white"
-                    android:gravity="center"
-                    android:background="@drawable/drawable_hv_bg_btn_login"
-                    android:layout_marginTop="30dp"
+                    android:visibility="visible"
+                    style_common:color_one="@color/color_hv_yelll"
+                    style_common:stroke="0dp"
+                    style_common:color_stroke="@color/red"
+                    style_common:corner="20dp"
+                    style_common:color_txt="@color/white"
+
+                    style_common:color_two="@color/color_grey_400"
+                    style_common:stroke_two="0dp"
+                    style_common:color_stroke_two="@color/color_hv_yelll"
+                    style_common:corner_two="20dp"
+                    style_common:color_txt_two="@color/color_hv_yelll"
+                    style_common:boo_one="true"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp" />
+                    android:layout_height="40dp" />
 
             </LinearLayout>
 
