--- a/heavycenter/src/main/res/layout/frag_acct_role_tip.xml
+++ b/heavycenter/src/main/res/layout/frag_acct_role_tip.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:style_common="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -14,7 +14,10 @@
         android:background="#e0000000"
         android:orientation="vertical">
         <LinearLayout
-            android:padding="5dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:background="@drawable/drawable_hv_acct_role_tip"
             android:orientation="vertical"
             android:layout_marginLeft="30dp"
@@ -31,25 +34,25 @@
                 <TextView
                     android:layout_centerInParent="true"
                     android:textColor="@color/black"
-                    android:textSize="16.5sp"
+                    android:textSize="18sp"
                     android:text="提示"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <ImageView
-                    android:layout_marginRight="5dp"
+                    android:padding="5dp"
                     android:layout_centerVertical="true"
                     android:id="@+id/tv_close"
                     android:src="@drawable/icon_hv_close"
                     android:layout_alignParentRight="true"
-                    android:layout_width="17dp"
-                    android:layout_height="17dp" />
+                    android:layout_width="25dp"
+                    android:layout_height="25dp" />
             </RelativeLayout>
             <View
                 android:layout_marginTop="5dp"
                 android:background="@color/color_grey_300"
                 android:layout_width="match_parent"
-                android:layout_height="1dp" />
+                android:layout_height="1px" />
 
             <TextView
                 android:layout_marginTop="20dp"
@@ -61,24 +64,39 @@
 
             <TextView
                 android:textColor="@color/color_hv_yelll"
-                android:textSize="21sp"
+                android:textSize="22sp"
                 android:text="非驾驶员"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <TextView
+
+            <com.siweisoft.heavycenter.module.view.text.BgTextView
+                android:gravity="center"
+                android:id="@+id/tv_sure"
+                android:text="确定"
+
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
                 android:layout_marginBottom="15dp"
                 android:paddingLeft="35dp"
                 android:paddingRight="35dp"
-                android:id="@+id/tv_sure"
-                android:text="确定"
+                android:layout_marginTop="15dp"
+
+                android:singleLine="true"
                 android:textSize="20sp"
-                android:textColor="@color/white"
-                android:gravity="center"
-                android:background="@drawable/drawable_hv_bg_btn_login"
-                android:layout_marginTop="13dp"
+                android:visibility="visible"
+                style_common:color_one="@color/color_hv_yelll"
+                style_common:stroke="0dp"
+                style_common:color_stroke="@color/red"
+                style_common:corner="20dp"
+                style_common:color_txt="@color/white"
+
+                style_common:color_two="@color/color_grey_400"
+                style_common:stroke_two="0dp"
+                style_common:color_stroke_two="@color/color_hv_yelll"
+                style_common:corner_two="20dp"
+                style_common:color_txt_two="@color/color_hv_yelll"
+                style_common:boo_one="true"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp" />
         </LinearLayout>
