--- a/heavycenter/src/main/res/layout/frag_myce_unit_new.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_new.xml
@@ -22,12 +22,14 @@
 
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
+            android:id="@+id/item_unitname"
             style_common:txt_left = "单位名称"
             style_common:txt_mid = "请输入公司名称"
             style_common:boo_edit = "true"
             android:layout_width="match_parent"
             android:layout_height="45dp"/>
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
+            android:id="@+id/item_nunitshortname"
             android:maxLength="4"
             style_common:txt_left = "单位简称"
             style_common:txt_mid = "请输入"
@@ -46,7 +48,7 @@
             android:layout_height="wrap_content"/>
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
-            android:id="@+id/addr"
+            android:id="@+id/unitaddr"
             style_common:txt_left = "单位地址"
             style_common:txt_two ="请选择"
             style_common:txt_mid = "请输入"
@@ -66,12 +68,14 @@
             android:layout_height="wrap_content"/>
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
+            android:id="@+id/unitcontact"
             style_common:txt_left = "联系人"
             style_common:txt_mid = "请输入"
             style_common:boo_edit = "true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
+            android:id="@+id/unitphone"
             style_common:txt_left = "联系电话"
             style_common:txt_mid = "请输入"
             style_common:boo_edit = "true"
