--- a/heavycenter/src/main/res/layout/item_acct_login_edit.xml
+++ b/heavycenter/src/main/res/layout/item_acct_login_edit.xml
@@ -21,10 +21,11 @@
                 android:layout_height="20dp" />
 
             <EditText
+
                 android:singleLine="true"
                 android:textColorHint="@color/color_grey_700"
                 android:id="@+id/et_txt"
-                android:paddingLeft="10dp"
+                android:paddingLeft="15dp"
                 android:textSize="17sp"
                 android:textColor="@color/white"
                 android:background="@color/transparent"
@@ -38,6 +39,17 @@
                 android:layout_marginRight="10dp"
                 android:layout_width="20dp"
                 android:layout_height="20dp" />
+
+            <TextView
+                android:id="@+id/tv_code"
+                android:gravity="center_vertical|right"
+                android:text="获取验证码"
+                android:textSize="15sp"
+                android:textColor="@color/color_hv_yelll"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/icon_hv_clear"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 </layout>
