--- a/heavycenter/src/main/res/layout/act_main.xml
+++ b/heavycenter/src/main/res/layout/act_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
         <FrameLayout
             android:orientation="vertical"
-            android:id="@+id/content_frame"
+            android:id="@+id/act_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <LinearLayout
