--- a/heavycenter/src/main/res/layout/frag_acct_role_tip.xml
+++ b/heavycenter/src/main/res/layout/frag_acct_role_tip.xml
@@ -9,6 +9,7 @@
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/dialog_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#e0000000"
