--- a/heavycenter/src/main/res/layout/item_mana_car_my.xml
+++ b/heavycenter/src/main/res/layout/item_mana_car_my.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="item_mana_car_my"
-            type="String" />
+            type="com.siweisoft.heavycenter.data.netd.mana.car.list.CarsResBean.ResultsBean" />
     </data>
     <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe"
@@ -63,7 +63,7 @@
                         android:singleLine="true"
                         android:textColor="@color/black"
                         android:textSize="16sp"
-                        android:text="沪A12345"
+                        android:text="@{item_mana_car_my.carLicenseNo}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
@@ -72,7 +72,7 @@
                         android:layout_marginLeft="14dp"
                         android:textColor="@color/black"
                         android:textSize="16sp"
-                        android:text="20T"
+                        android:text='@{item_mana_car_my.emptyWeight+""}'
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <View
@@ -84,7 +84,7 @@
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/black"
                         android:textSize="12sp"
-                        android:text="奔驰"
+                        android:text="@{item_mana_car_my.carBrand}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
@@ -99,7 +99,7 @@
                         android:singleLine="true"
                         android:textColor="@color/color_hv_txt_dark"
                         android:textSize="15sp"
-                        android:text="驾驶员：王先生"
+                        android:text="@{item_mana_car_my.trueName}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <TextView
@@ -107,7 +107,7 @@
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/color_hv_txt_dark"
                         android:textSize="15sp"
-                        android:text="联系电话：1111111111"
+                        android:text="@{item_mana_car_my.tel}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
