--- a/heavycenter/src/main/res/layout/item_mana_user.xml
+++ b/heavycenter/src/main/res/layout/item_mana_user.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="item_mana_user"
-            type="String" />
+            type="com.siweisoft.heavycenter.data.netd.unit.user.UnitUserResBean.ResultsBean" />
     </data>
     <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe"
@@ -60,7 +60,7 @@
                             android:singleLine="true"
                             android:textColor="@color/black"
                             android:textSize="16.5sp"
-                            android:text="张先生"
+                            android:text="@{item_mana_user.trueName}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
@@ -69,7 +69,7 @@
                             android:layout_marginLeft="20dp"
                             android:textColor="@color/color_hv_txt_dark"
                             android:textSize="16.5sp"
-                            android:text="12333333333"
+                            android:text="@{item_mana_user.tel}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <View
@@ -82,7 +82,7 @@
                             android:layout_marginLeft="10dp"
                             android:textColor="@color/black"
                             android:textSize="12sp"
-                            android:text="奔驰"
+                            android:text="在线"
                             android:paddingLeft="13dp"
                             android:paddingRight="13dp"
                             android:paddingTop="1dp"
@@ -97,7 +97,7 @@
                         android:singleLine="true"
                         android:textColor="@color/color_hv_txt_dark"
                         android:textSize="16.5sp"
-                        android:text="由管理员审核于 2017/10/12 10:10"
+                        android:text=""
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
