--- a/heavycenter/src/main/res/layout/frag_main_msg.xml
+++ b/heavycenter/src/main/res/layout/frag_main_msg.xml
@@ -24,6 +24,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <com.siweisoft.heavycenter.module.view.menu.TopTypeView
             android:id="@+id/topview"
             style_toptypeview:txts="全部,运输,车辆,公告,系统"
@@ -33,6 +37,7 @@
 
 
             <LinearLayout
+                android:layout_below="@+id/topview"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -42,6 +47,16 @@
             android:layout_centerInParent="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+
             </LinearLayout>
+
+            <com.siweisoft.heavycenter.module.view.menu.ScrollMenu
+                android:id="@+id/scrollmenu"
+                android:layout_marginTop="-3dp"
+                android:layout_below="@id/topview"
+                android:layout_width="match_parent"
+                android:layout_height="6dp"/>
+        </RelativeLayout>
     </LinearLayout>
 </layout>
